Change create gtp session API path
